<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_data_processing_policy">Политика обработки персональных данных</string>
    <string name="license_agreement_offer">Лицензионный договор - Оферта</string>
    <string name="russian">Русский</string>
    <string name="kazak">Казакша</string>
    <string name="english">English</string>
    <string name="notifications">Уведомления о действиях</string>
    <string name="сhoose_language">Выберите язык</string>
</resources>